--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ gunicorn
 numpy
 opencv-contrib-python-headless
 streamlit_drawable_canvas==0.1.1
-https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu/torchvision-0.4.2%2Bcpu-cp37-cp37m-linux_x86_64.whl
+pytorch-cpu
+torchvision
